[package]
name = "arrows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.3.3"
lazy_static = "^1.4.0"
local-ip-address = "^0.4.4"
uuid = {version = "^0.8.2", features = ["v4"]}
serde = {version= "^1.0.130", features = ["derive"]}
serde_json = "^1.0.69"
typetag = "^0.1.7"
fallible-streaming-iterator = "0.1.9"
rusqlite = {version="^0.26.1", features = ["bundled", "blob", "serde_json", "hooks"]}
rand = "^0.8.4"
mktemp = "0.4.1"
byte_marks = { git = "https://github.com/ratulb/byte_marks" }
clap = "2.34.0"
structopt = "0.3.25"
