[package]
name = "arrows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
local-ip-address = "0.4.4"
fallible-streaming-iterator = "0.1.9"
byte_marks = { git = "https://github.com/ratulb/byte_marks" }
clap = "2.34.0"
structopt = "0.3.25"
num_cpus = "1.13.1"
backtrace = "0.3.63"
bincode = "1.3.3"
serde_json = "1.0.75"
serde = {version= "1.0.133", features = ["derive"]}
parking_lot = "0.11.2"
rusqlite = {version="0.26.3", features = ["bundled", "blob", "serde_json", "hooks"]}
typetag = "0.1.8"
rand = "0.8.4"
lazy_static = "1.4.0"
uuid = {version = "0.8.2", features = ["v4"]}
[features]

