[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
local-ip-address = "0.4.4"
uuid = {version = "0.8.2", features = ["v4"]}
serde = {version= "1.0.130", features = ["derive"]}
serde_json = "1.0.69"
typetag = "0.1.7"
bincode = "1.3.3"
