[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bincode = "1.3.3"
chrono = "0.4.19"
lazy_static = "1.4.0"
serde = {version= "1.0.130", features = ["derive"]}
serde_json = "1.0.69"
typetag = "0.1.7"
