[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
#rusqlite = {version="0.26.1", features = ["bundled", "blob", "serde_json"]}
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", features = ["bundled", "blob", "serde_json"] }
bincode = "1.3.3"
chrono = "0.4.19"
lazy_static = "1.4.0"
serde = {version= "1.0.130", features = ["derive"]}
serde_json = "1.0.69"
typetag = "0.1.7"
rand = "0.8.4"
fallible-streaming-iterator = "0.1.9"
